syntax = "proto2";

option java_multiple_files = true;
option java_package = "common.modules.membership";
option java_outer_classname = "ChordialMembershipService";

import "membership/MembershipMessages.proto";

package chordial.membership;


service MembershipService {

    // Push-based synchronization RPC
    rpc Publish (Event) returns (Acknowledgement) {}

    // Pull-based synchronization RPCs
    rpc FullSync (FullSyncRequest) returns (SyncResponse) {}
    rpc UpdateSync (UpdateRequest) returns (SyncResponse) {}
}
