syntax = "proto2";

option java_multiple_files = true;
option java_package = "common.membership";
option java_outer_classname = "ChordialMembershipMessages";

import "membership/NodeInfo.proto";
import "partitioning/PartitioningMessages.proto";

package chordial.membership;


/*
 * The "Recovery/Update" request and responses are used by nodes to check with
 * other nodes whether its info is outdated
 */
message FullSyncRequest {
    required string node_id = 1;
    required fixed32 ip_address = 2; // May be back up with different IP
}

message UpdateRequest {}

message SyncInfo {
    required NodeInfo node_info = 1;
    optional partitioning.PartitionHashes partition_hashes = 2;
}

message SyncResponse {
    repeated SyncInfo sync_info = 1;
}